[project]
name = "rpad-pybullet-envs"
version = "0.1.0"
description = "A Python Package Template"
readme = "README.md"
requires-python = ">=3.6"
license = { file = "LICENSE.txt" }
authors = [{ email = "baeisner@andrew.cmu.edu", name = "Ben Eisner" }]
dependencies = [
  "importlib_resources; python_version < '3.9'",
  "gymnasium",
  "numpy",
  "pybullet",
  "rpad-pybullet-libs @ git+https://github.com/r-pad/pybullet_libs.git",
  "scipy",
]

[build-system]
requires = ["setuptools >= 62.3.2", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
develop = [
  "autoflake == 2.1.1",
  "black == 23.3.0",
  "isort == 5.12.0",
  "mypy == 1.3.0",
  "pylint == 2.17.4",
  "pytest == 7.3.2",
  "pre-commit == 3.3.3",
]
notebooks = ["jupyter"]
build_docs = ["mkdocs-material", "mkdocstrings[python]"]
pm = ["rpad-partnet-mobility-utils @ git+https://github.com/r-pad/partnet_mobility_utils"]

# This is required to allow us to have notebooks/ at the top level.
# The reason we included .../environments is because it's the only way to include
# a package, since it is the lowest in the chain with an __init__.py file. Otherwise
# we could have just included all the way down to assets/ur5/suction, but for
# some reason that wasn't working in 3.9. Don't fully understand, cuz it was working
# in 3.10. Whatever.
[tool.setuptools]
packages = ["rpad", "rpad_pybullet_envs_data"]
package-dir = { rpad = "src/rpad", rpad_pybullet_envs_data = "third_party/ravens/ravens/environments" }

[tool.setuptools.package-data]
rpad = ["py.typed"]
rpad_pybullet_envs_data = [
  "assets/ur5/suction/*.obj",
  "assets/ur5/suction/*.urdf",
]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.8
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

# Uncomment this when you have imports for mypy to ignore.
[[tool.mypy.overrides]]
module = ["pybullet.*", "pybullet_data.*", "scipy.*"]
ignore_missing_imports = true

[tool.pylint.TYPECHECK]
generated-members = "numpy.*,pybullet.*"

# Tell pytest to ignore third_party/ and build/ using ignore
[tool.pytest.ini_options]
addopts = ["--ignore=third_party", "--ignore=build"]
